<resources>
    <string name="app_name">Wawasan</string>
    <string name="grow">GROW\nYOUR BUSINESS</string>
    <string name="your_business">YOUR BUSINESS</string>
    <string name="welcome_image">welcome_image</string>
    <string name="slogan">We will help you to grow your business using online services!</string>
    <string name="start">Get Started</string>
    <string name="splash_image">splash_image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="back_page">back_page</string>
    <string name="logout">Logout</string>
    <string name="configure_host">Configure Host</string>
    <string name="next">Next</string>
    <string name="port">Port</string>
    <string name="host_name">Host name</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="setting">Setting</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="username">Username</string>
    <string name="supplier">Supplier</string>
    <string name="database">Database</string>
    <string name="code">Code</string>
    <string name="quantity">Quantity</string>
    <string name="product">Product</string>
</resources>