<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.welcome.WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/grow"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        android:layout_marginTop="95dp"
        android:textSize="35sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/welcome_image"
        android:src="@drawable/welcome_image" />

    <TextView
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/slogan" />

    <Button
        android:id="@+id/welcome_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="69dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/start"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>